--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && copyfiles -f src/config.json plugin && zlibrarybuilder"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "pluginlibrary": "github:rauenzi/BDPluginLibrary"
+  "author": "melodyflorum",
+  "devDependencies": {
+    "@types/bandagedbd__bdapi": "^0.3.3",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.5.5",
+    "zerespluginlibrarytypings": "github:HexCodeFFF/zerespluginlibrarytypings",
+    "zlibrarybuilder": "file:../ZLibraryBuilder"
+  },
+  "defaultConfig": {
+    "pluginFolder": "./plugin",
+    "copyToBD": true,
+    "addInstallScript": true
   }
 }
