--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "copyfiles": "^2.4.1",
     "typescript": "^4.5.5",
     "zerespluginlibrarytypings": "github:HexCodeFFF/zerespluginlibrarytypings",
-    "zlibrarybuilder": "file:../ZLibraryBuilder"
+    "zlibrarybuilder": "^1.1.0"
   },
   "defaultConfig": {
     "pluginFolder": "./plugin",
