--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
     "name": "PKBD",
     "author": "melody",
     "authorId": "214511018204725248",
-    "version": "0.0.3",
+    "version": "dev",
     "description": "PluralKit BetterDiscord Plugin",
     "github": "https://github.com/HexCodeFFF/pkbetterdiscordplugin"
   },
