im going to bed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "dom"
     ],
     "moduleResolution": "Node",
-    "jsx": "react"
+    "jsx": "react",
+    "module": "commonjs"
   },
   "include": [
     "src/**/*"
