--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@vercel/ncc": "^0.33.3",
     "copyfiles": "^2.4.1",
     "typescript": "^4.5.5",
     "zerespluginlibrarytypings": "github:HexCodeFFF/zerespluginlibrarytypings",
-    "zlibrarybuilder": "^1.1.0"
+    "zlibrarybuilder": "^1.2.0"
   },
   "defaultConfig": {
     "pluginFolder": "./plugin",
     "copyToBD": true,
     "addInstallScript": true
+  },
+  "dependencies": {
+    "ts-leaky-bucket": "^1.1.1"
   }
 }
